refactor(linearrag): 优化代码结构和依赖引入
- 移除不必要的 Collectors 导入和相关依赖
- 删除未使用的 MIN_ENTITY_LENGTH 常量
- 移除废弃的 findEntitiesInText 静态方法
- 简化代码中的空行和格式化
- 优化 LinearRagRetriever 中的流操作语法